@@ -1,9 +1,8 @@
 package com.example.delivery.models;
 
 import com.example.delivery.entities.FoodOptionEntity;
+import com.example.delivery.forms.food.FoodOptionForm;
 import com.google.common.collect.ImmutableList;
-
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 
@@ -12,18 +11,20 @@ public record FoodOption(
         OptionSelectionType type,
         ImmutableList<Various> various
 ) {
-    public FoodOption(
+    public static FoodOption of(
             String name,
             OptionSelectionType type,
             ImmutableList<Various> various
     ) {
-        this.name = checkNotNull(name);
-        this.type = checkNotNull(type);
-        this.various = checkNotNull(various);
+        return new FoodOption(
+                checkNotNull(name),
+                checkNotNull(type),
+                checkNotNull(various)
+        );
     }
 
     public static FoodOption fromMock() {
-        return new FoodOption(
+        return FoodOption.of(
                 "Meat tags",
                 OptionSelectionType.SINGLE,
                 ImmutableList.of(Various.fromMock())
@@ -31,14 +32,26 @@ public record FoodOption(
     }
 
     public static FoodOption fromEntity(FoodOptionEntity entity) {
-        return new FoodOption(
+        return FoodOption.of(
                 entity.getName(),
                 entity.getSelectionType(),
                 ImmutableList.copyOf(
                         checkNotNull(entity.getVarious())
                                 .stream()
                                 .map(Various::fromEntity)
-                                .collect(Collectors.toList())
+                                .toList()
+                )
+        );
+    }
+
+    public static FoodOption fromForm(FoodOptionForm form) {
+        return FoodOption.of(
+                form.name(),
+                form.type(),
+                ImmutableList.copyOf(
+                        form.various()
+                                .stream().map(Various::fromForm)
+                                .toList()
                 )
         );
     }
